# yfc

./: .gitignore  CMakeLists.txt  README.md  package.yml
.github/workflows/: c.yml  compiler.yml  linux.yml  macos.yml  test.yml  valgrind.yml
docs/: compiler-design.md
docs/driver/: jobs.md
scripts/: build.sh  lexer-benchmark.py  run-tests.py
src/api/: abstract-tree.h  cleanup.c  compilation-data.h  concrete-tree.h  cst-dump.c  cst-dump.h  generation.h  lexer-input.h  loc.h  operator.c  operator.h  parse-tree.h  sym.h  tokens.h
src/driver/: args.c  args.h  c-compiler.c  c-compiler.h  compile.c  compile.h  compiler-backend.c  compiler-backend.h  find-files.c  find-files.h  help.c  help.h  main.c  os.c  os.h
src/lexer/: keywords.c  keywords.h  lexer.c  lexer.h
src/parser/: control-flow.c  expr.c  func.c  parser-internals.h  parser.c  parser.h  stmt.c
src/semantics/: libsyms.c  libsyms.h  symtab.c  symtab.h  types.c  types.h  validate-utils.c  validate-utils.h  validate.c  validate.h
src/semantics/validate/: validate-control.c  validate-expr.c  validate-func.c  validate-internal.h  validate-utils.c  validate-var.c  validate.c  validate.h
src/util/: allocator.c  allocator.h  hashmap.c  hashmap.h  list.c  list.h  platform.h  result.h  yfc-out.h
tests/fuzzing/: crash0.yf  crash1.yf  crash10.yf  crash11.yf  crash12.yf  crash13.yf  crash15.yf  crash16.yf  crash17.yf  crash18.yf  crash19.yf  crash2.yf  crash20.yf  crash21.yf  crash22.yf  crash23.yf  crash24.yf  crash26.yf  crash27.yf  crash28.yf  crash29.yf  crash30.yf  crash31.yf  crash32.yf  crash33.yf  crash34.yf  crash35.yf  crash36.yf  crash37.yf  crash38.yf  crash4.yf  crash40.yf  crash41.yf  crash42.yf  crash43.yf  crash44.yf  crash45.yf  crash46.yf  crash47.yf  crash48.yf  (+52 more)
tests/fuzzing/crashes/: id:000008,sig:06,src:000031,time:9286,execs:4818,op:havoc,rep:4  id:000013,sig:11,src:000130+000007,time:80424,execs:43939,op:splice,rep:2  id:000017,sig:06,src:000004,time:101232,execs:56791,op:havoc,rep:2  id:000025,sig:06,src:000011,time:243276,execs:165349,op:havoc,rep:4  (+7 more)
tests/lexer/: index.json  keyword-test.yf  large-token.yf  lexer-test.yf  namespace.yf
tests/parser/: broken-comment.yf  funccall-parsing.yf  funcdecl-parsing.yf  index.json  op-parsing.yf  return-stmt.yf  vardecl-neq.yf  vardecl-test.yf
tests/sem/: bool-output-good.yf  duplicate-decl-global.yf  duplicate-decl-local.yf  duplicate-decl.yf  empty-stmt.yf  func-forward.yf  funccall-bad.yf  funccall-good.yf  funccall-types.yf  funcs-fail.yf  funcs-pass.yf  funcs.yf  if-condition-not-bool.yf  if-good.yf  index.json  invalid-int-literal.yf  no-value-assign.yf  return-bad.yf  return-block.yf  return-good.yf  return-warn.yf  shadow.yf  type-val-pass.yf  unknown-type.yf
(+5 files in other folders)
